# plotly-dash-asteroids

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: generate-requirements.yml
src/: app.py  component_ids.py  game.py  layout.py  theme.py
src/assets/: asteroids.js  style.css
src/components/: __init__.py  button.py  container.py
