[project]
name = "plotly-dash-asteroids"
version = "0.1.0"
description = "A retro-themed Asteroids game built with Plotly Dash"
authors = [
    {name = "Neal Horner"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=2.14.0",
    "plotly>=5.15.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "C408",  # unnecessary dict() call
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
